# haggles-v2

./: .env.example  .gitignore  DEPLOYMENT_FIXES.md  Hagglz AI Negotiation Agent - Complete System Overview.md  Hagglz Negotiation Agent - System Status Report.md  LICENSE  PROJECT_STRUCTURE.md  README.md  __init__.py  langgraph.json  main.py  negotiation_tools.py  orchestrator.py  pyproject.toml  requirements.txt  setup.py  telecom_agent.py  test_api.py  test_api_simple.py  test_imports.py  test_system.py  todo.md
config/: Dockerfile  docker-compose.yml  langgraph.yaml
docs/: API_REFERENCE.md  Hagglz AI Negotiation Agent.md  KNOWLEDGE_BASE_INDEX.md  LANGCHAIN_LANGGRAPH_DOCUMENTATION.md
docs/deployment/: Hagglz Negotiation Agent - Deployment Guide.md  LANGGRAPH_PLATFORM_DEPLOYMENT.md
scripts/: deploy.py
src/hagglz/: __init__.py
src/hagglz/agents/: __init__.py  medical_agent.py  subscription_agent.py  telecom_agent.py  utility_agent.py
src/hagglz/api/: __init__.py  main.py  run_api.py
src/hagglz/core/: __init__.py  orchestrator.py  router_agent.py
src/hagglz/integrations/: chunkr_client.py
src/hagglz/memory/: __init__.py  vector_store.py
src/hagglz/tools/: __init__.py
tests/integration/: test_integration.py
